# visibility-radius-sim

./: AGENTS.md  README.md  pyproject.toml
docs/: appendix_followups_plan.md
outputs/: README.md  actionable_attention_comparison_summary.csv  civilizational_adaptation_no_virtual_filter.csv  civilizational_adaptation_strong_actionable_culture.csv  extinction_avoidance_reserve_multiseed_summary.csv  extinction_avoidance_seed42.csv  factor_analysis.md  factor_analysis_multiseed_raw.csv  factor_analysis_multiseed_summary.csv  factor_analysis_seed42.csv  phantom_candidate_comparison_seed42.csv  reserve_threshold_report.md  reserve_threshold_seed42_reserve_0.000.csv  reserve_threshold_seed42_reserve_0.050.csv  reserve_threshold_seed42_reserve_0.125.csv  reserve_threshold_seed42_reserve_0.275.csv  reserve_threshold_seed42_summary.csv  reserve_threshold_slots_multiseed_raw.csv  reserve_threshold_slots_multiseed_summary.csv  sns_2000s.csv  sns_2000s.params.json  sns_2000s_no_phantom.csv  sns_2000s_no_phantom.params.json  sns_2000s_reserve_050.csv  sns_2000s_reserve_050.params.json  sns_2000s_reserve_075.csv  sns_2000s_reserve_075.params.json
outputs/demo/: demo.csv  demo.params.json
paper/: README.md  visibility_radius_working_paper.md  visibility_radius_working_paper_ja.md
scripts/: experiment_helpers.py  plot_cross_country_scenario_trajectories.py  run_appendix_followups.py  run_cross_country_calibration.py  run_gendered_aspiration.py  run_gendered_robustness.py  run_primary_hypothesis_validation.py  run_reality_grounded_calibration.py
tests/: test_simulation.py
(+72 files in other folders)
