[project]
name = "visibility-radius-sim"
version = "0.1.0"
description = "Minimal agent-based simulation of visibility radius and selection dynamics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/visibility_radius_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
